tests/paczka2/big_fuzzy/16160534.err
Error in line 6: 27ukgL7Y A436 40,4
Error in line 17: 27ukgL7Y A452 29,5
Error in line 36: 3YbxXnMxqj A436 57,66
Error in line 33: 3YbxXnMxqj A452 67,3
Error in line 41: 3YbxXnMxqj A819 27,36
Error in line 38: 3YbxXnMxqj A612 29,0
Error in line 43: vscKWfzefz8 A819 71,2
Error in line 47: vscKWfzefz8 A452 16,2
Error in line 48: vscKWfzefz8 A819 93,4
Error in line 42: 3YbxXnMxqj A819 24,0
Error in line 57: 3YbxXnMxqj A612 30,2
Error in line 71: 6dgSf A819 53,6
Error in line 76: 6dgSf A452 48,89
Error in line 77: Sa7zrDM9 A819 41,65
Error in line 79: MHIdFS4hlZo A452 56,64
Error in line 74: 6dgSf A452 73,4
Error in line 78: MHIdFS4hlZo A612 34,9
Error in line 102: Sa7zrDM9 A452 111,4
Error in line 106: 6dgSf A819 35,9
Error in line 110: 6dgSf A612 78,7
Error in line 91: MHIdFS4hlZo A452 24,3
Error in line 107: vscKWfzefz8 A612 87,8
Error in line 125: vscKWfzefz8 A819 24,1
Error in line 112: A819 A436 70,3
Error in line 135: MHIdFS4hlZo A452 59,7
Error in line 127: vscKWfzefz8 A452 56,1
Error in line 124: 3YbxXnMxqj A452 38,6
Error in line 138: MHIdFS4hlZo A819 9,2
Error in line 137: A819 A612 29,9
Error in line 143: MHIdFS4hlZo A452 97,3
Error in line 146: MHIdFS4hlZo A819 22,5
Error in line 150: MHIdFS4hlZo A612 44,1
Error in line 153: MHIdFS4hlZo A436 18,3
Error in line 159: MHIdFS4hlZo A612 41,2
Error in line 172: A819 A819 32,2
Error in line 170: 6dgSf A612 90,2
Error in line 182: Sa7zrDM9 A819 64,5
Error in line 200: Sa7zrDM9 A452 0,7
Error in line 203: 27ukgL7Y A819 77,2
Error in line 225: MHIdFS4hlZo A612 15,0
Error in line 227: MHIdFS4hlZo A436 87,9
Error in line 224: 6dgSf A452 19,7
Error in line 242: A819 A452 3,2
Error in line 244: A819 A436 21,6
Error in line 243: MHIdFS4hlZo A612 7,4
